# mstts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: README.md  ci.yml  publish.yml
src/mstts/: __init__.py  mstts.py
tests/: __init__.py  conftest.py  test_get_row_selection.py  test_integration.py  test_train_test_split.py
