[project]
name = "mstts"
version = "0.1.0"
description = "Multi-class Stratified Train Test Spliter"
readme = "README.md"
authors = [
    { name = "Mykhailo Vladymyrov", email = "neworldemancer@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
