[project]
name = "mstts"
version = "0.1.0"
description = "Multi-class Stratified Train Test Spliter"
readme = "README.md"
authors = [
    { name = "Mykhailo Vladymyrov", email = "neworldemancer@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "ortools>=9.0",

]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
# "extras" (e.g. for `pip install .[test]`)
[project.optional-dependencies]
# add dependencies used for testing here
test = ["pytest", "pytest-cov"]
dev = ["ruff", "mypy", "pre-commit", "rich", "datatour"]

[project.urls]
homepage = "https://github.com/dsl-unibe-ch/mstts.git"

# Entry points
# https://peps.python.org/pep-0621/#entry-points
# same as console_scripts entry point
[project.scripts]
mstts = "mstts.scripts.mstts:main"

[tool.uv_build]
src_dir = "src"
package = "mstts"
include = ["py.typed"]
exclude = ["tests"]
[tool.uv_build.sdist]
include = ["README.md", "LICENSE"]
[tool.uv_build.wheel]
universal = true
include = ["py.typed"]
[tool.uv_build.check]
metadata = true
strict = true
readme = true
requires = true
license = true

[tool.uv_build.format]
    line-length = 120
    skip-string-normalization = true

[tool.uv_build.format.isort]
    profile = "black"
    line-length = 120

[tool.uv_build.format.ruff]
    select = ["E", "F", "W", "C90", "B", "I", "Q"]
    ignore = ["E501", "W503"]
    max-line-length = 120

[tool.uv_build.format.mypy]
    ignore_missing_imports = true
    check_untyped_defs = true
    disallow_untyped_defs = true
    disallow_incomplete_defs = true
    warn_unused_ignores = true
    warn_redundant_casts = true
    warn_return_any = true
    warn_unreachable = true
    strict_equality = true
    python_version = 3.10

[tool.uv_build.format.pydocstyle]
    convention = "numpy"
    add-ignore = ["D104", "D107"]
    match-dir = ["mstts"]
    match = ["*.py"]
    ignore = ["setup.py", "tests"]


# to init pre-commit in your repo, run:
# pre-commit install
# to run:
# pre-commit run --all-files



