[project]
name = "mstts"
version = "0.1.0"
description = "Multi-class Stratified Train Test Spliter"
readme = "README.md"
authors = [
    { name = "Mykhailo Vladymyrov", email = "neworldemancer@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "ortools>=9.0"
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
# "extras" (e.g. for `pip install .[test]`)
[project.optional-dependencies]
# add dependencies used for testing here
test = ["pytest", "pytest-cov"]
dev = ["ruff", "mypy", "pre-commit", "rich"]

[project.urls]
homepage = "https://github.com/dsl-unibe-ch/mstts.git"

# Entry points
# https://peps.python.org/pep-0621/#entry-points
# same as console_scripts entry point
[project.scripts]
mstts = "mstts.scripts.mstts:main"

[tool.uv_build]
src_dir = "src"
package = "mstts"
include = ["py.typed"]
exclude = ["tests"]
[tool.uv_build.sdist]
include = ["README.md", "LICENSE"]
[tool.uv_build.wheel]
universal = true
include = ["py.typed"]
[tool.uv_build.check]
metadata = true
strict = true
readme = true
requires = true
license = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "B", "I", "Q"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["src"]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict_equality = true


# to init pre-commit in your repo, run:
#  uv run pre-commit install
# to run:
# uv run pre-commit run --all-files
